--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve -s dist"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -23,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^15.5.2",
     "react-router-dom": "^6.22.1",
+    "serve": "^14.2.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
