Fix Render deployment: Add explicit render.yaml config and update start script

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "postbuild": "ls -la dist/",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "start": "serve -s dist"
+    "start": "serve -s dist -p $PORT"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
