--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,11 @@ services:
   - type: web
     name: techwizards-frontend
     env: node
-    buildCommand: npm install && npm run build
-    startCommand: npm start
+    region: oregon
+    buildCommand: npm ci && npm run build
+    startCommand: npm run serve
+    healthCheckPath: /
+    envVars:
+      - key: NODE_ENV
+        value: production
     staticPublishPath: ./dist 
