--- a/package.json
+++ b/package.json
@@ -13,32 +13,14 @@
     "serve": "serve -s dist"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.2.5",
-    "@mui/icons-material": "^5.15.10",
-    "@mui/material": "^5.15.10",
-    "axios": "^1.6.7",
-    "framer-motion": "^11.0.5",
-    "i18next": "^25.2.1",
-    "i18next-browser-languagedetector": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^15.5.2",
-    "react-router-dom": "^6.22.1",
-    "serve": "^14.2.0",
-    "styled-components": "^6.1.8"
+    "serve": "^14.2.0"
   },
   "devDependencies": {
-    "@types/node": "^22.15.21",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
   }
